Fix code buttons on mobile

--- a/src/components/CodeViewer/CodeViewer.module.scss
+++ b/src/components/CodeViewer/CodeViewer.module.scss
@@ -82,7 +82,7 @@
 
 .containersWrapper {
   z-index: 20;
-  width: 80%;
+  width: 85%;
   position: fixed;
   top: 110px;
   left: 50%;
