--- a/src/utils/sharedStyles.module.scss
+++ b/src/utils/sharedStyles.module.scss
@@ -62,7 +62,8 @@
     position: relative;
     cursor: pointer;
     border: 2px solid var(--white);
-    padding: 12px 20px;
+    padding: 12px 10px;
+    font-size: 13px;
     border-radius: 8px;
 
     &:before {
@@ -82,6 +83,11 @@
       &:before {
         transform: scaleX(1);
       }
+    }
+
+    @media only screen and (min-width: 767px) {
+      padding: 12px 20px;
+      font-size: 14px;
     }
   }
 
